force-app/main/default/objects/PartnerMembership__c/PartnerMembership__c.object-meta.xml
<CustomObject>
    <label>Partner Membership</label>
    <nameField>
        <displayFormat>PM{0000000}</displayFormat>
        <label>Partner Membership Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>