force-app/main/default/objects/PartnerMembership__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partner Memberships</relationshipLabel>
    <relationshipName>PartnershipMembers</relationshipName>
    <type>Lookup</type>
</CustomField>