force-app/main/default/objects/PartnerMembership__c/fields/Filter_Name__c.field-meta.xml
<CustomField>
    <fullName>Filter_Name__c</fullName>
    <formula>&quot;Investor: &quot;&amp; Investor_Account__r.Name &amp;&quot; | Partnership: &quot;&amp;Partnership_Account__r.Name</formula>
    <label>Filter Name</label>
    <type>Text</type>
</CustomField>