force-app/main/default/objects/PartnerMembership__c/fields/InvestmentAmount__c.field-meta.xml
<CustomField>
    <fullName>InvestmentAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Investment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>