force-app/main/default/objects/PartnerMembership__c/fields/Investor_Account__c.field-meta.xml
<CustomField>
    <fullName>Investor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account to be associated to this partner membership (does not have to be contact&#39;s primary account)</inlineHelpText>
    <label>Investor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Memberships (Investor)</relationshipLabel>
    <relationshipName>Partner_Memberships_Investor</relationshipName>
    <type>Lookup</type>
</CustomField>