force-app/main/default/objects/PartnerMembership__c/fields/Investor_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Investor_Account_Name__c</fullName>
    <formula>Investor_Account__r.Name</formula>
    <inlineHelpText>For community purposes only.</inlineHelpText>
    <label>Investor Account Name</label>
    <type>Text</type>
</CustomField>