force-app/main/default/objects/PartnerMembership__c/fields/Label_for_List_Filter__c.field-meta.xml
<CustomField>
    <fullName>Label_for_List_Filter__c</fullName>
    <formula>&quot;My Partnership: &quot; &amp;Partnership_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in flow: Horse Filtered List</inlineHelpText>
    <label>Label for List Filter</label>
    <type>Text</type>
</CustomField>