force-app/main/default/objects/PartnerMembership__c/fields/OwnershipPerc__c.field-meta.xml
<CustomField>
    <fullName>OwnershipPerc__c</fullName>
    <formula>if(
   AND(
       Partnership_Account__r.partnershipAmountRaised__c &gt; 0,
       InvestmentAmount__c &gt; 0
  ),
  (InvestmentAmount__c / Partnership_Account__r.partnershipAmountRaised__c),
   NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ownership %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>