force-app/main/default/objects/PartnerMembership__c/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <formula>Contact__r.FirstName + &quot; &quot; + Contact__r.LastName</formula>
    <label>Investor Name</label>
    <type>Text</type>
</CustomField>