force-app/main/default/objects/PartnerMembership__c/fields/Partnership_Account__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Account__c</fullName>
    <inlineHelpText>DTMWS Partnership Account</inlineHelpText>
    <label>Partnership Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Memberships</relationshipLabel>
    <relationshipName>Partner</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>