force-app/main/default/objects/PartnerMembership__c/fields/Partnership_Amount_Raised__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Amount_Raised__c</fullName>
    <formula>Partnership_Account__r.partnershipAmountRaised__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partnership Amount Raised</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>