force-app/main/default/objects/PartnerMembership__c/fields/Partnership_Name__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Name__c</fullName>
    <formula>Partnership_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partnership Name</label>
    <type>Text</type>
</CustomField>