force-app/main/default/objects/PartnerMembership__c/fields/UnitsOwned__c.field-meta.xml
<CustomField>
    <fullName>UnitsOwned__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Units Owned</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>