force-app/main/default/objects/PartnerMembership__c/listViews/Active_Partner_Memberships.listView-meta.xml
<ListView>
    <fullName>Active_Partner_Memberships</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Active Partner Memberships</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>