force-app/main/default/objects/PartnerMembership__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Partnership_Name__c</columns>
    <columns>InvestmentAmount__c</columns>
    <columns>OwnershipPerc__c</columns>
    <columns>UnitsOwned__c</columns>
    <columns>Investor_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>