force-app/main/default/objects/PartnerMembership__c/listViews/High_Value_Partner_Memberships.listView-meta.xml
<ListView>
    <fullName>High_Value_Partner_Memberships</fullName>
    <columns>NAME</columns>
    <columns>Investor_Account__c</columns>
    <columns>InvestmentAmount__c</columns>
    <columns>OwnershipPerc__c</columns>
    <columns>UnitsOwned__c</columns>
    <columns>Partnership_Account__c</columns>
    <columns>Partner_Name__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>InvestmentAmount__c</field>
        <operation>greaterThan</operation>
        <value>30000</value>
    </filters>
    <label>Investments over 30k Partner Memberships</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>