force-app/main/default/objects/PartnerMembership__c/listViews/My_Invested_DTMWS_Partnerships.listView-meta.xml
<ListView>
    <fullName>My_Invested_DTMWS_Partnerships</fullName>
    <columns>Partnership_Name__c</columns>
    <columns>Partnership_Amount_Raised__c</columns>
    <columns>Investor_Account__c</columns>
    <columns>InvestmentAmount__c</columns>
    <columns>OwnershipPerc__c</columns>
    <columns>UnitsOwned__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Invested DTMWS Partnerships</label>
</ListView>